buttons name changed

--- a/template/views/index.hbs
+++ b/template/views/index.hbs
@@ -22,14 +22,14 @@
             <form id="form" enctype ="multipart/form-data" action="sendFile" method="post">
             <div class="form-group">
             <input type="file" name="file" class="form-control"/>
-            <input type="submit"  value="Download CSV file" name="submit" class="btn btn-primary" style="float:right; margin-top:30px;">
+            <input type="submit"  value="Download UM_USER CSV file" name="submit" class="btn btn-primary" style="float:right; margin-top:30px;">
             </form> 
         </div>
         <div >
         <form id="form" enctype ="multipart/form-data" action="updateFile" method="post">
             <div class="form-group">
             <input type="file" name="file" class="form-control"/>
-            <input type="submit"  value="Download updated CSV file" name="submit" class="btn btn-primary" style="float:right; margin-top:30px;">
+            <input type="submit"  value="Download UM_USER_ATTRIBUTE CSV file" name="submit" class="btn btn-primary" style="float:right; margin-top:30px;">
         </form> 
         </div> 
     </div>
